# biblioatom-extractor

./: .gitignore  AGENTS.md  LICENSE  README.md  biblioatom-extractor.user.js  convert_book.py  pyproject.toml  test_convert_book.py
